--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.3.0'
 
+    // Circle View
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 }
