--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".FavoritesPokemonActivity" />
         <activity android:name=".Details" />
+        <activity android:name=".AboutActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
