--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,5 +62,8 @@ dependencies {
     // Circle View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    2.71828
+
 
 }
